--- a/public/css/app.css
+++ b/public/css/app.css
@@ -670,6 +670,69 @@ select {
 .left-0 {
   left: 0px;
 }
+.top-2 {
+  top: 0.5rem;
+}
+.-right-1 {
+  right: -0.25rem;
+}
+.-right-5 {
+  right: -1.25rem;
+}
+.-top-2 {
+  top: -0.5rem;
+}
+.-top-10 {
+  top: -2.5rem;
+}
+.-right-10 {
+  right: -2.5rem;
+}
+.-top-12 {
+  top: -3rem;
+}
+.right-2 {
+  right: 0.5rem;
+}
+.-top-14 {
+  top: -3.5rem;
+}
+.left-3 {
+  left: 0.75rem;
+}
+.left-2 {
+  left: 0.5rem;
+}
+.-top-20 {
+  top: -5rem;
+}
+.-right-12 {
+  right: -3rem;
+}
+.-top-4 {
+  top: -1rem;
+}
+.-right-4 {
+  right: -1rem;
+}
+.-top-3 {
+  top: -0.75rem;
+}
+.-right-3 {
+  right: -0.75rem;
+}
+.-right-14 {
+  right: -3.5rem;
+}
+.-right-20 {
+  right: -5rem;
+}
+.-right-24 {
+  right: -6rem;
+}
+.-right-28 {
+  right: -7rem;
+}
 .z-0 {
   z-index: 0;
 }
@@ -778,6 +841,9 @@ select {
 .block {
   display: block;
 }
+.inline-block {
+  display: inline-block;
+}
 .flex {
   display: flex;
 }
@@ -836,6 +902,12 @@ select {
 }
 .h-16 {
   height: 4rem;
+}
+.max-h-96 {
+  max-height: 24rem;
+}
+.max-h-72 {
+  max-height: 18rem;
 }
 .min-h-full {
   min-height: 100%;
@@ -904,6 +976,18 @@ select {
 }
 .w-48 {
   width: 12rem;
+}
+.w-56 {
+  width: 14rem;
+}
+.w-60 {
+  width: 15rem;
+}
+.w-64 {
+  width: 16rem;
+}
+.w-72 {
+  width: 18rem;
 }
 .max-w-5xl {
   max-width: 64rem;
@@ -992,14 +1076,23 @@ select {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
 .flex-col {
   flex-direction: column;
+}
+.flex-col-reverse {
+  flex-direction: column-reverse;
 }
 .items-end {
   align-items: flex-end;
 }
 .items-center {
   align-items: center;
+}
+.items-baseline {
+  align-items: baseline;
 }
 .justify-end {
   justify-content: flex-end;
@@ -1152,6 +1245,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
 .border-b-blue {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(50 138 241 / var(--tw-border-opacity));
@@ -1211,6 +1308,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(238 242 255 / var(--tw-bg-opacity));
 }
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
 .bg-opacity-75 {
   --tw-bg-opacity: 0.75;
 }
@@ -1231,6 +1332,9 @@ select {
 }
 .p-3 {
   padding: 0.75rem;
+}
+.p-5 {
+  padding: 1.25rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1345,6 +1449,9 @@ select {
 }
 .text-center {
   text-align: center;
+}
+.text-justify {
+  text-align: justify;
 }
 .font-sans {
   font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -1545,6 +1652,10 @@ select {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-gray-500 {
+  --tw-shadow-color: #6b7280;
+  --tw-shadow: var(--tw-shadow-colored);
+}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1605,6 +1716,9 @@ select {
 .duration-75 {
   transition-duration: 75ms;
 }
+.duration-500 {
+  transition-duration: 500ms;
+}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1619,6 +1733,18 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+}
+.line-clamp-4 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
+.line-clamp-5 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
 }
 [x-cloak] { display: none !important; }
 .status-open::before{
@@ -2061,6 +2187,14 @@ select {
     left: 1.25rem;
   }
 
+  .md\:-left-5 {
+    left: -1.25rem;
+  }
+
+  .md\:-right-1 {
+    right: -0.25rem;
+  }
+
   .md\:m-0 {
     margin: 0px;
   }
@@ -2081,6 +2215,10 @@ select {
     margin-left: 0px;
   }
 
+  .md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -2093,12 +2231,20 @@ select {
     display: none;
   }
 
+  .md\:max-h-96 {
+    max-height: 24rem;
+  }
+
   .md\:w-2\/3 {
     width: 66.666667%;
   }
 
   .md\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .md\:w-72 {
+    width: 18rem;
   }
 
   .md\:max-w-2xl {
