--- a/public/css/app.css
+++ b/public/css/app.css
@@ -649,6 +649,15 @@ select {
 .-left-4 {
   left: -1rem;
 }
+.-top-3 {
+  top: -0.75rem;
+}
+.-right-3 {
+  right: -0.75rem;
+}
+.-right-28 {
+  right: -7rem;
+}
 .bottom-5 {
   bottom: 1.25rem;
 }
@@ -670,80 +679,17 @@ select {
 .left-0 {
   left: 0px;
 }
-.top-2 {
-  top: 0.5rem;
-}
-.-right-1 {
-  right: -0.25rem;
-}
-.-right-5 {
-  right: -1.25rem;
-}
-.-top-2 {
-  top: -0.5rem;
-}
-.-top-10 {
-  top: -2.5rem;
-}
-.-right-10 {
-  right: -2.5rem;
-}
-.-top-12 {
-  top: -3rem;
-}
-.right-2 {
-  right: 0.5rem;
-}
-.-top-14 {
-  top: -3.5rem;
-}
-.left-3 {
-  left: 0.75rem;
-}
-.left-2 {
-  left: 0.5rem;
-}
-.-top-20 {
-  top: -5rem;
-}
-.-right-12 {
-  right: -3rem;
-}
-.-top-4 {
-  top: -1rem;
-}
-.-right-4 {
-  right: -1rem;
-}
-.-top-3 {
-  top: -0.75rem;
-}
-.-right-3 {
-  right: -0.75rem;
-}
-.-right-14 {
-  right: -3.5rem;
-}
-.-right-20 {
-  right: -5rem;
-}
-.-right-24 {
-  right: -6rem;
-}
-.-right-28 {
-  right: -7rem;
-}
 .z-0 {
   z-index: 0;
 }
 .z-10 {
   z-index: 10;
 }
-.z-40 {
-  z-index: 40;
-}
 .z-20 {
   z-index: 20;
+}
+.z-40 {
+  z-index: 40;
 }
 .z-50 {
   z-index: 50;
@@ -781,6 +727,10 @@ select {
   margin-left: 1rem;
   margin-right: 1rem;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -811,6 +761,9 @@ select {
 .ml-2 {
   margin-left: 0.5rem;
 }
+.mt-1 {
+  margin-top: 0.25rem;
+}
 .mt-8 {
   margin-top: 2rem;
 }
@@ -819,9 +772,6 @@ select {
 }
 .mb-4 {
   margin-bottom: 1rem;
-}
-.mt-1 {
-  margin-top: 0.25rem;
 }
 .ml-20 {
   margin-left: 5rem;
@@ -840,9 +790,6 @@ select {
 }
 .block {
   display: block;
-}
-.inline-block {
-  display: inline-block;
 }
 .flex {
   display: flex;
@@ -877,6 +824,9 @@ select {
 .h-4 {
   height: 1rem;
 }
+.h-3 {
+  height: 0.75rem;
+}
 .h-fit {
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -903,12 +853,6 @@ select {
 .h-16 {
   height: 4rem;
 }
-.h-3 {
-  height: 0.75rem;
-}
-.max-h-96 {
-  max-height: 24rem;
-}
 .max-h-72 {
   max-height: 18rem;
 }
@@ -926,6 +870,9 @@ select {
 }
 .w-full {
   width: 100%;
+}
+.w-1\/3 {
+  width: 33.333333%;
 }
 .w-12 {
   width: 3rem;
@@ -945,8 +892,8 @@ select {
 .w-1\/2 {
   width: 50%;
 }
-.w-1\/3 {
-  width: 33.333333%;
+.w-64 {
+  width: 16rem;
 }
 .w-20 {
   width: 5rem;
@@ -979,18 +926,6 @@ select {
 }
 .w-48 {
   width: 12rem;
-}
-.w-56 {
-  width: 14rem;
-}
-.w-60 {
-  width: 15rem;
-}
-.w-64 {
-  width: 16rem;
-}
-.w-72 {
-  width: 18rem;
 }
 .max-w-5xl {
   max-width: 64rem;
@@ -1095,23 +1030,14 @@ select {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
-.flex-row-reverse {
-  flex-direction: row-reverse;
-}
 .flex-col {
   flex-direction: column;
-}
-.flex-col-reverse {
-  flex-direction: column-reverse;
 }
 .items-end {
   align-items: flex-end;
 }
 .items-center {
   align-items: center;
-}
-.items-baseline {
-  align-items: baseline;
 }
 .justify-end {
   justify-content: flex-end;
@@ -1122,18 +1048,21 @@ select {
 .justify-between {
   justify-content: space-between;
 }
+.justify-evenly {
+  justify-content: space-evenly;
+}
 .justify-items-center {
   justify-items: center;
-}
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -1188,11 +1117,11 @@ select {
 .rounded-full {
   border-radius: 9999px;
 }
-.rounded-2xl {
-  border-radius: 1rem;
-}
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-2xl {
+  border-radius: 1rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -1216,14 +1145,14 @@ select {
 .border-2 {
   border-width: 2px;
 }
+.border-t {
+  border-top-width: 1px;
+}
 .border-r {
   border-right-width: 1px;
 }
 .border-b-4 {
   border-bottom-width: 4px;
-}
-.border-t {
-  border-top-width: 1px;
 }
 .border-b {
   border-bottom-width: 1px;
@@ -1252,6 +1181,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
@@ -1263,10 +1196,6 @@ select {
 .border-gray-100 {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-.border-gray-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 .border-b-blue {
   --tw-border-opacity: 1;
@@ -1283,6 +1212,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(247 248 252 / var(--tw-bg-opacity));
 }
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
 .bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
@@ -1298,10 +1231,6 @@ select {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -1351,9 +1280,6 @@ select {
 }
 .p-3 {
   padding: 0.75rem;
-}
-.p-5 {
-  padding: 1.25rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1469,9 +1395,6 @@ select {
 .text-center {
   text-align: center;
 }
-.text-justify {
-  text-align: justify;
-}
 .font-sans {
   font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -1553,13 +1476,13 @@ select {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.text-red {
-  --tw-text-opacity: 1;
-  color: rgb(236 69 79 / var(--tw-text-opacity));
-}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-red {
+  --tw-text-opacity: 1;
+  color: rgb(236 69 79 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -1569,14 +1492,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
-.text-blue {
-  --tw-text-opacity: 1;
-  color: rgb(50 138 241 / var(--tw-text-opacity));
-}
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -1584,6 +1499,14 @@ select {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.text-blue {
+  --tw-text-opacity: 1;
+  color: rgb(50 138 241 / var(--tw-text-opacity));
+}
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .text-purple {
   --tw-text-opacity: 1;
@@ -1675,6 +1598,10 @@ select {
   --tw-shadow-color: #6b7280;
   --tw-shadow: var(--tw-shadow-colored);
 }
+.shadow-black {
+  --tw-shadow-color: #000;
+  --tw-shadow: var(--tw-shadow-colored);
+}
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1735,9 +1662,6 @@ select {
 .duration-75 {
   transition-duration: 75ms;
 }
-.duration-500 {
-  transition-duration: 500ms;
-}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1752,12 +1676,6 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-}
-.line-clamp-4 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
 }
 .line-clamp-5 {
   overflow: hidden;
@@ -1813,6 +1731,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(40 121 189 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
@@ -1828,10 +1750,6 @@ select {
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -2202,16 +2120,12 @@ select {
     left: 0px;
   }
 
-  .md\:left-5 {
-    left: 1.25rem;
-  }
-
-  .md\:-left-5 {
-    left: -1.25rem;
-  }
-
   .md\:-right-1 {
     right: -0.25rem;
+  }
+
+  .md\:left-5 {
+    left: 1.25rem;
   }
 
   .md\:m-0 {
@@ -2226,16 +2140,16 @@ select {
     margin-right: 2.5rem;
   }
 
+  .md\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
   .md\:ml-20 {
     margin-left: 5rem;
   }
 
   .md\:ml-0 {
     margin-left: 0px;
-  }
-
-  .md\:mt-2 {
-    margin-top: 0.5rem;
   }
 
   .md\:block {
@@ -2254,16 +2168,16 @@ select {
     max-height: 24rem;
   }
 
+  .md\:w-72 {
+    width: 18rem;
+  }
+
   .md\:w-2\/3 {
     width: 66.666667%;
   }
 
   .md\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .md\:w-72 {
-    width: 18rem;
   }
 
   .md\:max-w-2xl {
